Roughly implemented brushes menu - lots of bugs and miss alignments to fix. Commented the TODOs at the end of the body.ts component

--- a/src/app/components/body/brushes/brushes.component.scss
+++ b/src/app/components/body/brushes/brushes.component.scss
@@ -7,12 +7,52 @@
 .brushes-menu {
     position: absolute;
     width: 130px;
-    height: 400px;
+    height: 360px;
     left:-140px;
     top: -365px;
     border: 1px solid;
     border-radius: 10px;
     background-color: rgb(237, 237, 237);
+    display:flex;
+    align-items: flex-start;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content:flex-end;
+
+    
+    
 }
+
+.size-btn {
+    font-family: sans-serif;
+    font-size: large;
+    font-weight: bold;
+    height: 35px;
+    border-bottom:1px solid ;
+    line-height: 35px;
+    text-align:center;
+}
+
+.size-btn:hover {
+    border: 3px solid;
+    border-radius: 4px;
+}
+
+.first:hover {
+    border-top-left-radius:10px;
+    border-top-right-radius:10px;
+    height: 34px;
+}
+
+.last {
+    border-radius: 10px;
+}
+
+.last:hover {
+    border-bottom-left-radius:10px;
+    border-bottom-right-radius:10px;
+}
+
+
 
 
